tests/baselines/reference/moduleAugmentationGlobal5.errors.txt
f3.ts(3,1): error TS18056: Declaration file contains hand-written file reference directives: "f1.d.ts", "f2.d.ts"


==== f3.ts (1 errors) ====
    /// <reference path="f1.d.ts"/>
    /// <reference path="f2.d.ts"/>
    import "A";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "f1.d.ts", "f2.d.ts"
    import "B";
    
    
==== f1.d.ts (0 errors) ====
    declare module "A" {
        global {
            interface Something {x}
        }
    }
==== f2.d.ts (0 errors) ====
    declare module "B" {
        global {
            interface Something {y}
        }
    }